--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <body>
   <img id="image"/>
+  <canvas id="canv"></canvas>
   <script type="text/javascript" src="./js/scripts.js"></script>
 </body>
 </html>
