--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <body>
   <img id="image"/>
   <canvas id="canv"></canvas>
+  <textarea id="text">
+  </textarea>
   <script type="text/javascript" src="./js/scripts.js"></script>
 </body>
 </html>
