take out default tabs in textarea

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <body>
   <img id="image"/>
   <canvas id="canv"></canvas>
-  <textarea id="text">
-  </textarea>
+  <textarea id="text"></textarea>
   <script type="text/javascript" src="./js/scripts.js"></script>
 </body>
 </html>
