--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 </head>
 
 <body>
-  <img id="image"/>
-  <canvas id="canv"></canvas>
-  <textarea id="text"></textarea>
+  <div class="container">
+    <img id="image"/>
+    <canvas id="canv"></canvas>
+    <textarea id="text"></textarea>
+  </div>
   <script type="text/javascript" src="./js/scripts.js"></script>
 </body>
 </html>
