--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container center">
     <img id="image"/>
     <canvas id="canv"></canvas>
     <textarea id="text"></textarea>
