--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 </head>
 
 <body>
-  <div class="container center">
-    <img id="image"/>
-    <canvas id="canv"></canvas>
-    <textarea id="text"></textarea>
-  </div>
+  <section class="main">
+    <div class="container">
+      <img id="image"/>
+      <canvas id="canv"></canvas>
+      <textarea id="text"></textarea>
+    </div>
+  </section>
   <script type="text/javascript" src="./js/scripts.js"></script>
 </body>
 </html>
