--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 </head>
 
 <body>
+  <div class="modal">
+  </div>
   <section class="main">
     <div class="container">
       <img id="image"/>
