--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="container">
       <canvas id="canv"></canvas>
       <textarea id="text"></textarea>
+      <button>Submit</button>
     </div>
   </section>
   <script type="text/javascript" src="./js/scripts.js"></script>
