--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <link rel='shortcut icon' href='./img/logo.png'/>
 
+  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro" rel="stylesheet">
+
   <link rel="stylesheet" type="text/css" href="./css/lib/wing.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   <script>
