--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel='shortcut icon' href='./img/logo.png'/>
 
-  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Open+Sans:700" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="./css/lib/wing.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/styles.css" />
