small class div

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
   </div>
   <section class="main">
     <div class="container">
-      <canvas id="canv"></canvas>
-      <textarea id="text"></textarea>
-      <button id="submit">Submit</button>
+      <div class="small">
+        <canvas id="canv"></canvas>
+        <textarea id="text"></textarea>
+        <button id="submit">Submit</button>
+      </div>
     </div>
   </section>
   <script type="text/javascript" src="./js/scripts.js"></script>
