--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="small">
         <canvas id="canv"></canvas>
-        <textarea id="text"></textarea>
+        <textarea id="text" onkeyup="grow(this)"></textarea>
         <button id="submit">Submit</button>
       </div>
     </div>
