placeholder for textarea

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="small">
         <canvas id="canv"></canvas>
-        <textarea id="text" onkeyup="grow(this)"></textarea>
+        <textarea id="text" onkeyup="grow(this)" placeholder="Text"></textarea>
         <button id="submit">Submit</button>
       </div>
       <img id="image"/>
