--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
       <img id="image"/>
     </div>
   </section>
+  <footer>
+  <a href="http://kabir.ml" id="footer-link">
+    <div id="footer-content">
+      <img src="./img/logo.png" id="footer-logo"/>
+      <div id="footer-desc">
+        <p id="footer-madeby">Made by</p>
+        <p id="footer-name">Kabir</p>
+      </div>
+    </div>
+  </a>
+</footer>
   <script type="text/javascript" src="./js/scripts.js"></script>
 </body>
 </html>
