--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Turn text into an image.">
   <meta name="author" content="Kabir Shah">
 
-  <title>Toad</title>
+  <title>Alter</title>
 
   <link rel='shortcut icon' href='./img/logo.png'/>
 
